--- a/articles/api-management/index.yml
+++ b/articles/api-management/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: georgewallace
   ms.author: gwallace
   ms.date: 03/08/2020
-  ms.openlocfilehash: 64e0d0e7837cd03e2761d8e79653d9ac8b68f41d
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: db35ab98c2e53246fddc26d724b24fda71eee6dc
+  ms.sourcegitcommit: 50802bffd56155f3b01bfb4ed009b70045131750
   ms.translationtype: HT
   ms.contentlocale: ja-JP
   ms.lasthandoff: 10/09/2020
-  ms.locfileid: "90052819"
+  ms.locfileid: "91932619"
 landingContent:
 - title: API Management について
   linkLists:
@@ -37,6 +37,8 @@ landingContent:
       url: powershell-create-service-instance.md
     - text: Visual Studio Code
       url: vscode-create-service-instance.md
+    - text: ARM テンプレート
+      url: quickstart-arm-template.md
 - title: API Management の管理
   linkLists:
   - linkListType: tutorial
