commit translated contents

--- a/articles/iot-central/core/TOC.yml
+++ b/articles/iot-central/core/TOC.yml
@@ -63,7 +63,7 @@
           href: 'https://docs.microsoft.com/learn/modules/manage-iot-central-apps-with-rest-api/'
 - name: 概念
   items:
-    - name: アーキテクチャ
+    - name: Architecture
       href: concepts-architecture.md
     - name: アプリケーション テンプレートとは
       href: concepts-app-templates.md
@@ -170,9 +170,11 @@
             - name: ライブ チャットの切り替え
               href: howto-show-hide-chat.md
     - name: トラブルシューティング
-      items: null
-      '-name': Device connections
-      href: troubleshoot-connection.md
+      items:
+        - name: デバイスの接続
+          href: troubleshoot-connection.md
+    - name: よく寄せられる質問
+      href: howto-faq.md
 - name: リファレンス
   items:
     - name: Azure CLI
