--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -45,7 +45,7 @@
       href: whats-new.md
     - name: コンポーネント
       href: components.md
-    - name: 概念
+    - name: 負荷分散アルゴリズム
       href: concepts.md
     - name: SKU
       href: skus.md
