--- a/articles/azure-signalr/TOC.yml
+++ b/articles/azure-signalr/TOC.yml
@@ -19,6 +19,9 @@
       href: signalr-quickstart-azure-functions-java.md
     - name: Azure Functions - Python
       href: signalr-quickstart-azure-functions-python.md
+    - name: Azure SignalR Service のデプロイ - Resource Manager テンプレート
+      href: signalr-quickstart-azure-signalr-service-arm-template.md
+      displayName: deploy azure resource manager template
     - name: REST API
       href: signalr-quickstart-rest-api.md
 - name: チュートリアル
