--- a/articles/load-balancer/index.yml
+++ b/articles/load-balancer/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: asudbring
   ms.author: allensu
   ms.date: 05/07/2020
-  ms.openlocfilehash: a6348b967e814a49c766388540a594987af2231e
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: afc3b8c4d10bc55d8d7c8faa5e8d9eedd9e2a082
+  ms.sourcegitcommit: 50802bffd56155f3b01bfb4ed009b70045131750
   ms.translationtype: HT
   ms.contentlocale: ja-JP
   ms.lasthandoff: 10/09/2020
-  ms.locfileid: "89296940"
+  ms.locfileid: "91929746"
 landingContent:
 - title: Load Balancer について
   linkLists:
@@ -24,7 +24,7 @@ landingContent:
     links:
     - text: Load Balancer とは
       url: load-balancer-overview.md
-    - text: Load Balancer の概念
+    - text: Load Balancer のアルゴリズム
       url: concepts.md
     - text: Load Balancer のコンポーネント
       url: components.md
@@ -96,6 +96,10 @@ landingContent:
       url: load-balancer-common-deployment-errors.md
     - text: 送信接続に関する一般的な問題の解決
       url: troubleshoot-outbound-connection.md
+  - linkListType: video
+    links:
+    - text: Azure Load Balancer を使用して高可用性アプリを構築および監視する
+      url: https://techcommunity.microsoft.com/t5/video-hub/build-amp-monitor-highly-available-apps-w-azure-load-balancer/m-p/1703353
 - title: リファレンス
   linkLists:
   - linkListType: reference
