--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -64,6 +64,8 @@
       href: tutorial-deploy-vm-content-library.md
     - name: GitHub Enterprise Server を設定する
       href: github-enterprise-server.md
+    - name: IPSec トンネルを作成する
+      href: create-ipsec-tunnel.md
     - name: Azure のネイティブ統合
       items:
         - name: API Management
