--- a/articles/key-vault/general/toc.yml
+++ b/articles/key-vault/general/toc.yml
@@ -162,6 +162,8 @@
       href: client-libraries.md
     - name: REST API のエラー コード - Azure Key Vault
       href: rest-error-codes.md
+    - name: 一般的なエラー コード - Azure Key Vault
+      href: common-error-codes.md
     - name: 一般的なパラメーターとヘッダー
       href: common-parameters-and-headers.md
     - name: Key Vault のバージョン
