--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -245,6 +245,9 @@
             - name: Azure PowerShell
               href: howto-restore-server-powershell.md
               displayName: 'restore server, backup, geo-restore powershell'
+            - name: 削除されたサーバーの復元
+              href: howto-restore-dropped-server.md
+              displayName: 'restore server,dropped, recover'
         - name: アプリケーションの接続
           items:
             - name: SSL の構成
@@ -323,20 +326,26 @@
             - name: Azure PowerShell を使用した読み取りレプリカの作成
               href: howto-read-replicas-powershell.md
               displayName: 'data-in replication, replica, failover'
-            - name: トラブルシューティング
-              items:
-                - name: 接続エラーのトラブルシューティング
-                  href: howto-troubleshoot-common-connection-issues.md
-                  displayName: 'debug, connection issues, connectivity, cannot connect'
-                - name: クエリ パフォーマンスのトラブルシューティング
-                  href: howto-troubleshoot-query-performance.md
-                  displayName: 'debug, performance issues, query performance'
-                - name: sys スキーマでビューを使用する方法
-                  href: howto-troubleshoot-sys-schema.md
-                  displayName: 'sys schema, views'
-                - name: データ暗号化のトラブルシューティング
-                  href: howto-data-encryption-troubleshoot.md
-                  displayName: 'encryption, security'
+        - name: トラブルシューティング
+          items:
+            - name: 接続エラーのトラブルシューティング
+              href: howto-troubleshoot-common-connection-issues.md
+              displayName: 'debug, connection issues, connectivity, cannot connect'
+            - name: 一般的なエラーのトラブルシューティング
+              href: howto-troubleshoot-common-errors.md
+              displayName: 'SUPER privilege, DBA role, Access is denied'
+            - name: クエリ パフォーマンスのトラブルシューティング
+              href: howto-troubleshoot-query-performance.md
+              displayName: 'debug, performance issues, query performance'
+            - name: sys スキーマでビューを使用する方法
+              href: howto-troubleshoot-sys-schema.md
+              displayName: 'sys schema, views'
+            - name: データ暗号化のトラブルシューティング
+              href: howto-data-encryption-troubleshoot.md
+              displayName: 'encryption, security'
+            - name: レプリケーションの待ち時間のトラブルシューティング
+              href: howto-troubleshoot-replication-latency.md
+              displayName: 'replication, latency, monitor'
         - name: 高度な脅威保護
           items:
             - name: Azure portal
