--- a/articles/azure-resource-manager/index.yml
+++ b/articles/azure-resource-manager/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: tfitzmac
   ms.author: tomfitz
   ms.date: 03/04/2020
-  ms.openlocfilehash: 6a0c4ecff3f381dc12ba3ce6f385782754857bfe
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: d67c16a10a0f0efbab281f14cf39c185ba1c82ef
+  ms.sourcegitcommit: a2d8acc1b0bf4fba90bfed9241b299dc35753ee6
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "78297733"
+  ms.lasthandoff: 10/12/2020
+  ms.locfileid: "91948789"
 highlightedContent:
   items:
   - title: Azure Resource Manager とは
@@ -90,7 +90,7 @@ conceptualContent:
     - url: managed-applications/create-uidefinition-overview.md
       itemType: how-to-guide
       text: アプリを作成するためのポータル ウィンドウを定義する
-    - url: managed-applications/publish-marketplace-app.md
+    - url: ../marketplace/partner-center-portal/create-new-azure-apps-offer.md
       itemType: tutorial
       text: アプリを Marketplace に追加する
     footerLink:
