--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -304,7 +304,7 @@
             - name: VM インスタンス サイズの柔軟性
               href: ../reserved-vm-instance-size-flexibility.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
     - name: 専用ホスト
-      href: dedicated-hosts.md
+      href: ../dedicated-hosts.md
     - name: メンテナンスと更新
       href: ../maintenance-and-updates.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
     - name: Disk Storage
