--- a/articles/active-directory-domain-services/index.yml
+++ b/articles/active-directory-domain-services/index.yml
@@ -9,16 +9,16 @@ metadata:
   ms.subservice: domain-services
   ms.topic: landing-page
   ms.collection: collection
-  author: iainfoulds
-  ms.author: iainfou
+  author: MicrosoftGuyJFlo
+  ms.author: joflore
   manager: daveba
   ms.date: 08/01/2019
-  ms.openlocfilehash: 859c5ecbfc549d1dff1d874977aaecd86a899af0
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 906dbe9b177a162250d51e33fcbf34ad3ffe20af
+  ms.sourcegitcommit: d103a93e7ef2dde1298f04e307920378a87e982a
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "88245147"
+  ms.lasthandoff: 10/13/2020
+  ms.locfileid: "91962362"
 landingContent:
 - title: Azure AD Domain Services について
   linkLists:
