--- a/articles/azure-resource-manager/managed-applications/index.yml
+++ b/articles/azure-resource-manager/managed-applications/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: tfitzmac
   ms.author: tomfitz
   ms.date: 01/02/2020
-  ms.openlocfilehash: 15cd46ba2758fd1a56f7d19791713eae72bac1d2
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 34c22ad96b8d70023270d293541f0ea6b5411509
+  ms.sourcegitcommit: a2d8acc1b0bf4fba90bfed9241b299dc35753ee6
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "86057655"
+  ms.lasthandoff: 10/12/2020
+  ms.locfileid: "91951827"
 landingContent:
 - title: Managed Applications について
   linkLists:
@@ -44,7 +44,7 @@ landingContent:
     - text: 定義ファイルの作成
       url: publish-service-catalog-app.md
     - text: マーケットプレース アプリケーションの発行
-      url: publish-marketplace-app.md
+      url: ../../marketplace/partner-center-portal/create-new-azure-apps-offer.md
     - text: カスタム プロバイダーを使用してマネージド アプリケーションを作成する
       url: tutorial-create-managed-app-with-custom-provider.md
   - linkListType: how-to-guide
