--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -61,7 +61,7 @@
     - name: VM のディザスター リカバリーをデプロイする
       href: disaster-recovery-for-virtual-machines.md
     - name: コンテンツ ライブラリを介して VM をデプロイする
-      href: tutorial-deploy-vm-content-library.md
+      href: ./deploy-vm-content-library.md
     - name: GitHub Enterprise Server を設定する
       href: github-enterprise-server.md
     - name: IPSec トンネルを作成する
