--- a/articles/virtual-machines/linux/index.yml
+++ b/articles/virtual-machines/linux/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: cynthn
   ms.author: cynthn
   ms.date: 09/19/2019
-  ms.openlocfilehash: edc0fa71a169ddce00f361e4125f72094692b087
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 77c73159d604a137af470f137d261b5a172d6875
+  ms.sourcegitcommit: d103a93e7ef2dde1298f04e307920378a87e982a
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "88816798"
+  ms.lasthandoff: 10/13/2020
+  ms.locfileid: "91978392"
 landingContent:
 - title: 最新の機能
   linkLists:
@@ -24,7 +24,7 @@ landingContent:
     - text: スポット VM
       url: ../spot-vms.md
     - text: 専用ホスト
-      url: dedicated-hosts.md
+      url: ../dedicated-hosts.md
     - text: 近接通信配置グループ
       url: proximity-placement-groups.md
 - title: はじめに
